# crewai-starter-template

./: README.md  pyproject.toml  report.md
src/brd_srs/: crew.py  main.py
