[project]
name = "brd_srs"
version = "0.1.0"
description = "BRD-SRS using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
brd_srs = "brd_srs.main:run"
run_crew = "brd_srs.main:run"
train = "brd_srs.main:train"
replay = "brd_srs.main:replay"
test = "brd_srs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
